[tool.poetry]
name = "tper_claim_assistant"
version = "v0.0.1"
description = "Python package for..."
authors = [""]
readme = "README.md"
packages = [{ include = "tper_claim_assistant", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"   
playwright = "^1.49.0"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
coverage = "^7.6.5"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.mypy]
# available settings: https://mypy.readthedocs.io/en/latest/config_file.html
python_version = 3.12

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

disallow_untyped_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-ra -q -v"
pythonpath = [
    "./"
]
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
